[project]
name = "platypush"
description = "A general-purpose framework for automation"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
  {name = "Fabio Manganiello", email = "fabio@manganiello.tech"},
]

classifiers=[
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]

readme = "README.md"
requires-python = '>= 3.6'
keywords = [
  "home-automation", "automation", "iot", "mqtt", "websockets", "redis", "dashboard", "notifications"
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
homepage = "https://platypush.tech"
repository = "https://git.platypush.tech/platypush/platypush"
documentation = "https://docs.platypush.tech"
blog = "https://blog.platypush.tech"

[project.scripts]
platypush = 'platypush:main'
platydock = 'platypush.platydock:main'
platyvenv = 'platypush.platyvenv:main'

[tool.flit.sdist]
include = [
	'platypush/backend/http/webapp/dist/*',
  'platypush/components.json.gz',
  'platypush/config/*.yaml',
  'platypush/install/**',
  'platypush/install/docker/*',
  'platypush/install/requirements/*',
  'platypush/install/scripts/*',
  'platypush/install/scripts/**/*',
  'platypush/migrations/alembic.ini',
  'platypush/migrations/alembic/*',
  'platypush/migrations/alembic/**/*',
  'platypush/plugins/http/webpage/mercury-parser.js'
]

[tool.bumpversion]
current_version = "1.2.2"
commit = true
tag = true

[tool.black]
skip-string-normalization = true
skip-numeric-underscore-normalization = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:There is no current event loop:DeprecationWarning',
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[[tool.bumpversion.files]]
filename = "platypush/__init__.py"

[[tool.bumpversion.files]]
filename = "version.py"
