[bumpversion]
current_version = 0.50.3
commit = True
tag = True

[files]
packages = pbr
data_files =
    platypush/backend/http/webapp/dist/*
    platypush/install/*
    platypush/plugins/http/webpage/mercury-parser.js
    platypush/config/*.yaml


[metadata]
description_file = README.md

[flake8]
max-line-length = 120
exclude =
    # Legacy library copied from the upstream repo
    fliclib.py

extend-ignore =
	E203
	W503
    SIM104
	SIM105

